<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginBottom="15dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/rlDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_corners_layout"
        android:orientation="horizontal"
        android:gravity="center"

        >
        <LinearLayout
            android:id="@+id/rlImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgBeer"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <View
                android:id="@+id/vw"
                android:layout_width="4dp"
                android:layout_height="wrap_content"
                android:background="@color/yellow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rlDetailItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:paddingStart="2dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/gray"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/tvNameBeer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/nombre_cerveza"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tagline"
                android:paddingStart="2dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/gray"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tvTagLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/lema"
                android:textStyle="bold|italic"
                android:textColor="@color/gray"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tvFirstBrewed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="sans-serif-light"
                android:text="01/2020"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>